--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 
 # command to install dependencies
 install:
+  - "pip install --upgrade pip"
   - "pip install ."
   - "pip install -r requirements.txt"
 
