--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - "pip install --upgrade pip"
   - "pip install ."
   - "pip install -r requirements.txt"
+  - "python -c 'import nltk; nltk.download('stopwords')"
 
 # command to run tests
 script: nosetests
