--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - "pip install --upgrade pip"
   - "pip install ."
   - "pip install -r requirements.txt"
-  - "python -c 'import nltk; nltk.download('stopwords')"
+  - "python -m nltk.downloader stopwords"
 
 # command to run tests
 script: nosetests
