--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,7 +1,22 @@
+# .readthedocs.yml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
+version: 2
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+
+# Build documentation with MkDocs
+#mkdocs:
+#  configuration: mkdocs.yml
+
+# Optionally build your docs in additional formats such as PDF
 formats:
-    - none
-conda:
-    file: docs/environment.yml
+  - none
+
+# Optionally set the version of Python and requirements required to build your docs
 python:
-    version: 2
-    setup_py_install: true
+  version: 3.6
