--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,10 +6,10 @@ include *.h5
 
 recursive-include ./insight_extractor/*
 
-include ./models/*.h5
-include ./models/*.json
-include ./VERSION
-include ./requirements.txt
+include ./insight_extractor/models/*.h5
+include ./insight_extractor/models/*.json
+include VERSION
+include requirements.txt
 exclude *.log
 
 recursive-exclude * __pycache__
