--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-# production requirements
 absl-py==0.11.0
+alabaster==0.7.12
 astunparse==1.6.3
+atomicwrites==1.4.0
+attrs==20.3.0
+Babel==2.9.0
+bleach==3.2.1
 cachetools==4.2.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
+docutils==0.16
 flatbuffers==1.12
 gast==0.3.3
 google-auth==1.24.0
@@ -13,45 +19,67 @@ google-pasta==0.2.0
 grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
-importlib-metadata==3.3.0
+imagesize==1.2.0
+importlib-metadata==3.4.0
+iniconfig==1.1.1
+-e git+git@github.com:NoahFinberg/insight_extractor.git@74e9b9e0b4f4a9b5aca4b809c7ea3c62e2036557#egg=insight_extractor
+Jinja2==2.11.2
 joblib==1.0.0
 Keras-Preprocessing==1.1.2
+keyring==21.8.0
 Markdown==3.3.3
+MarkupSafe==1.1.1
+more-itertools==8.6.0
 nltk==3.5
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+packaging==20.8
 pandas==1.1.5
+pathlib==1.0.1
+pkginfo==1.6.1
+pluggy==0.13.1
 protobuf==3.14.0
+py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+Pygments==2.7.4
+pyparsing==2.4.7
+pytest==6.2.1
 python-dateutil==2.8.1
 pytz==2020.5
+readme-renderer==28.0
 regex==2020.11.13
 requests==2.25.1
 requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 rsa==4.7
 scikit-learn==0.24.0
 scipy==1.5.4
 six==1.15.0
 sklearn==0.0
-tensorboard==2.4.0
+snowballstemmer==2.0.0
+Sphinx==3.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+tensorboard==2.4.1
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.4.0
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
-tqdm==4.55.2
+toml==0.10.2
+tqdm==4.56.0
+twine==3.3.0
 typing-extensions==3.7.4.3
 urllib3==1.26.2
+wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.4.0
-
-
-# packaging
-setuptools>=40.0.0
-wheel>=0.32.3
-
-# testing requirements
-pytest>=4.6.6,<5.0.0
