--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 sudo: false
-dist: trusty
+dist: bionic
 
 language: python
 
 python:
-- '3.6'
+- '3.7'
 
 # command to install dependencies
 install:
